--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,5 +6,10 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
+
+  data:
+    web:
+      pageable:
+        default-page-size: 1
