--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,4 +12,5 @@ spring:
   data:
     web:
       pageable:
-        default-page-size: 1
+        default-page-size: 5
+        one-indexed-parameters: true
