--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,12 +8,13 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate.format_sql: true
 
-  data:
-    web:
-      pageable:
-        default-page-size: 5
-        one-indexed-parameters: true
+#  data:
+#    web:
+#      pageable:
+#        one-indexed-parameters: true
 
   thymeleaf:
     cache: false
