--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,15 +6,10 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
     properties:
       hibernate.format_sql: true
-
-#  data:
-#    web:
-#      pageable:
-#        one-indexed-parameters: true
 
   thymeleaf:
     cache: false
